--- a/form-website/frontend/src/styles/Footer.css
+++ b/form-website/frontend/src/styles/Footer.css
@@ -2,6 +2,7 @@
   text-align: center;
   font-size: var(--font-size-lg);
   font-weight: bold;
+  margin-bottom: var(--spacing-xl);
 }
 
 .footer-link {
