--- a/form-website/frontend/src/styles/NotFoundPage.css
+++ b/form-website/frontend/src/styles/NotFoundPage.css
@@ -4,7 +4,7 @@ body {
 }
 
 .not-found-container {
-  min-height: 80vh;
+  min-height: 50vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,6 +14,8 @@ body {
   background: white;
   border-radius: 20px;
   padding: 60px 40px;
+  margin-bottom: 20px;
+  margin-top: 40px;
   text-align: center;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
   max-width: 500px;
